can: can application with unknown commands

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,14 @@ add_executable(can_continuous_rx
     can_continuous_rx.c
 )
 
+add_executable(rx_app
+    rx_app.c
+)
+
+add_executable(tx_app
+    tx_app.c
+)
+
 # Libraries
 # when running g++ these will be included as -static LIB or -lLIB
 # target_link_libraries(${PROJECT_NAME}
